api/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    garden.io/service: api
  name: api
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    garden.io/action: deploy.api
